--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.4",
-    "mongoose": "^5.11.14"
+    "mongoose": "^5.11.14",
+    "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli": "^4.5.11",
